Fix bug where search buttons div would generate white space on smaller devices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,3 @@
-html {
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
-}
-
 body {
     background-color: #FFF;
     font-family: Arial, Helvetica, sans-serif;
@@ -92,7 +84,7 @@ input {
     justify-content: center;
     align-items: center;
     margin-top: 20px;
-    width: 31.25rem;
+    width: 100%;
 }
 
 .search-buttons button {
@@ -124,7 +116,7 @@ footer ul {
     list-style: none;
     display: flex;
     flex-direction: row;
-    padding: 0 2%;
+    padding: 0;
 }
 
 footer ul li a {
@@ -158,8 +150,11 @@ footer nav {
 
 
 @media (max-width: 620px) {
+    html {
+        font-size: 80%;
+    }
     form {
-        min-width: 245px;
+        min-width: 80vw;
         width: 80%;
     }
 }
